[package]
name = "lanner"
version = "0.0.1"
authors = ["EthanJustice <47954690+EthanJustice@users.noreply.github.com>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/hvlck/lanner"
repository = "https://github.com/hvlck/lanner"
license = "MIT"
publish = false

[dependencies]
# parsing
pest = "~2.1.3"
pest_derive = "~2.1.0"
lazy_static = "~1.4.0"

# core
uom = { version = "~0.31.0", features = ["f64", "si", "std"] }
