[package]
name = "lcli"
description = "math evaluator targeting WASM/JS"
version = "0.0.0"
authors = ["EthanJustice <47954690+EthanJustice@users.noreply.github.com>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/hvlck/lanner"
repository = "https://github.com/hvlck/lanner"
license = "MIT"
publish = false

[dependencies]
lanner = { path = "../" }
clap = { version = "~2.33.3", features = ["suggestions"] }