[package]
name = "lanner_threadpool"
version = "0.1.0"
authors = ["EthanJustice <47954690+EthanJustice@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lanner_parser = {version = "0.1.0", path = "../lanner_parser" }
rayon = "1.3.1"